# cfr-court-opinions

./: .gitignore  .proxyrc.js  README.org  deploy.sh  ecfrs.py  index.html  main.css  main.js  make_database.py  package.json  pdfs.py  pyproject.toml  tables.py  work_dir.py
